--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-markdown": "^10.1.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "@google/generative-ai": "^0.1.0",
+    "openai": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
