--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@react-pdf/renderer": "^4.3.1",
     "@supabase/supabase-js": "^2.87.1",
     "@types/xml2js": "^0.4.14",
     "clsx": "^2.1.1",
